--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2000,7 +2000,11 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_army_factionalism_decision_category:0 "Army Factionalism"
  TUR_army_factionalism_decision_category_desc:0 "New era in our empire has brough a new political order with it. Yet instead of democratic means as had been envisioned, both sides of the political spectrum wish to rise to power via military coupes rather than democratic means. Unless we manage to maintain our grip over these cliques, political consequences are imminent."
  TUR_ittihadist_name_text:0 "İttihadist Officers"
- TUR_itilafist_name_text:0 "İtilafist Officers"
+ TUR_halaskaran_get_name:0 "[TUR_halaskaran_get_name]"
+ TUR_halaskaran_get_name_opposition:0 "Opposition"
+ TUR_halaskaran_get_name_itilafist:0 "İtilafist"
+ TUR_halaskaran_get_name_halaskaran:0 "Halâskâran"
+ TUR_itilafist_name_text:0 "[TUR_halaskaran_get_name] Officers"
  TUR_loyalty_header:0 "Loyalty"
  TUR_power_header:0 "Power"
  TUR_army_loyalty_loyal:0 "Loyal"
@@ -2055,16 +2059,16 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_increase_ittihadist_power_tt_limited:0 "§Yİttihadist Officers§!' power will become §YLimited§!\n"
  TUR_increase_ittihadist_power_tt_decreased:0 "§Yİttihadist Officers§!' power will become §YDecreased§!\n"
  TUR_increase_ittihadist_power_tt_minimal:0 "§Yİttihadist Officers§!' power will become §YMinimal§!\n"
- TUR_increase_itilafist_loyalty_tt_loyal:0 "§Yİtilafist Officers§!' loyalty will become §YLoyal§!\n"
- TUR_increase_itilafist_loyalty_tt_friendly:0 "§Yİtilafist Officers§!' loyalty will become §YFirendly§!\n"
- TUR_increase_itilafist_loyalty_tt_neutral:0 "§Yİtilafist Officers§!' loyalty will become §YNeutral§!\n"
- TUR_increase_itilafist_loyalty_tt_opposed:0 "§Yİtilafist Officers§!' loyalty will become §YOpposed§!\n"
- TUR_increase_itilafist_loyalty_tt_hostile:0 "§Yİtilafist Officers§!' loyalty will become §YHostile§!\n"
- TUR_increase_itilafist_power_tt_powerful:0 "§Yİtilafist Officers§!' power will become §YPowerful§!\n"
- TUR_increase_itilafist_power_tt_extended:0 "§Yİtilafist Officers§!' power will become §YExtended§!\n"
- TUR_increase_itilafist_power_tt_limited:0 "§Yİtilafist Officers§!' power will become §YLimited§!\n"
- TUR_increase_itilafist_power_tt_decreased:0 "§Yİtilafist Officers§!' power will become §YDecreased§!\n"
- TUR_increase_itilafist_power_tt_minimal:0 "§Yİtilafist Officers§!' power will become §YMinimal§!\n"
+ TUR_increase_itilafist_loyalty_tt_loyal:0 "§Y[TUR_halaskaran_get_name] Officers§!' loyalty will become §YLoyal§!\n"
+ TUR_increase_itilafist_loyalty_tt_friendly:0 "§Y[TUR_halaskaran_get_name] Officers§!' loyalty will become §YFirendly§!\n"
+ TUR_increase_itilafist_loyalty_tt_neutral:0 "§Y[TUR_halaskaran_get_name] Officers§!' loyalty will become §YNeutral§!\n"
+ TUR_increase_itilafist_loyalty_tt_opposed:0 "§Y[TUR_halaskaran_get_name] Officers§!' loyalty will become §YOpposed§!\n"
+ TUR_increase_itilafist_loyalty_tt_hostile:0 "§Y[TUR_halaskaran_get_name] Officers§!' loyalty will become §YHostile§!\n"
+ TUR_increase_itilafist_power_tt_powerful:0 "§Y[TUR_halaskaran_get_name] Officers§!' power will become §YPowerful§!\n"
+ TUR_increase_itilafist_power_tt_extended:0 "§Y[TUR_halaskaran_get_name] Officers§!' power will become §YExtended§!\n"
+ TUR_increase_itilafist_power_tt_limited:0 "§Y[TUR_halaskaran_get_name] Officers§!' power will become §YLimited§!\n"
+ TUR_increase_itilafist_power_tt_decreased:0 "§Y[TUR_halaskaran_get_name] Officers§!' power will become §YDecreased§!\n"
+ TUR_increase_itilafist_power_tt_minimal:0 "§Y[TUR_halaskaran_get_name] Officers§!' power will become §YMinimal§!\n"
 
  TUR_not_ittihadist_loyalty_tt_loyal:0 "NOT: §Yİttihadist Officers§!' loyalty is §YLoyal§!\n"
  TUR_not_ittihadist_loyalty_tt_opposing:0 "NOT: §Yİttihadist Officers§!' loyalty is §YOpposing§!\n"
@@ -2075,18 +2079,19 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_not_ittihadist_power_tt_decreased:0 "NOT: §Yİttihadist Officers§!' power is §YDecreased§!\n"
  TUR_not_ittihadist_power_tt_minimal:0 "NOT: §Yİttihadist Officers§!' power is §YMinimal§!\n"
  TUR_not_ittihadist_loyalty_tt_loyal:0 "NOT: §Yİttihadist Officers§!' loyalty is §YLoyal§!\n"
- TUR_not_itilafist_loyalty_tt_opposing:0 "NOT: §Yİtilafist Officers§!' loyalty is §YOpposing§!\n"
- TUR_not_itilafist_loyalty_tt_hostile:0 "NOT: §Yİtilafist Officers§!' loyalty is §YHostile§!\n"
- TUR_not_itilafist_power_tt_powerful:0 "NOT: §Yİtilafist Officers§!' power is §YPowerful§!\n"
- TUR_not_itilafist_power_tt_extended:0 "NOT: §Yİtilafist Officers§!' power is §YExtended§!\n"
- TUR_not_itilafist_power_tt_limited:0 "NOT: §Yİtilafist Officers§!' power is §YLimited§!\n"
- TUR_not_itilafist_power_tt_decreased:0 "NOT: §Yİtilafist Officers§!' power is §YDecreased§!\n"
- TUR_not_itilafist_power_tt_minimal:0 "NOT: §Yİtilafist Officers§!' power is §YMinimal§!\n"
+ TUR_not_itilafist_loyalty_tt_opposing:0 "NOT: §Y[TUR_halaskaran_get_name] Officers§!' loyalty is §YOpposing§!\n"
+ TUR_not_itilafist_loyalty_tt_hostile:0 "NOT: §Y[TUR_halaskaran_get_name] Officers§!' loyalty is §YHostile§!\n"
+ TUR_not_itilafist_power_tt_powerful:0 "NOT: §Y[TUR_halaskaran_get_name] Officers§!' power is §YPowerful§!\n"
+ TUR_not_itilafist_power_tt_extended:0 "NOT: §Y[TUR_halaskaran_get_name] Officers§!' power is §YExtended§!\n"
+ TUR_not_itilafist_power_tt_limited:0 "NOT: §Y[TUR_halaskaran_get_name] Officers§!' power is §YLimited§!\n"
+ TUR_not_itilafist_power_tt_decreased:0 "NOT: §Y[TUR_halaskaran_get_name] Officers§!' power is §YDecreased§!\n"
+ TUR_not_itilafist_power_tt_minimal:0 "NOT: §Y[TUR_halaskaran_get_name] Officers§!' power is §YMinimal§!\n"
 
  TUR_action_army_coup:0 "Action Army Coup"
  TUR_action_army_coup_desc:0 "Annoyed by the government's current direction, a wing of the army known as the Hareket Ordusu (Action Army) are preparing a coup to replace the current government with a one that has a more positive outlook to the ittihadist agenda."
  TUR_saviour_officer_coup:0 "Saviour Officers Coup"
  TUR_saviour_officer_coup_desc:0 "Annoyed by the government's current direction, a group within the army known as the Halâskâr Zâbitân (Saviour Officers) are preparing a coup to replace the current government with a one that has a more positive outlook to the liberal agenda."
+ TUR_saviour_officer_coup_tt:0 "\n§YActivation Effect:§!\n§Yİtilafist Officers§! will be known as §YHalâskâran Officers§!"
  TUR_raid_on_the_sublime_porte:0 "Raid on the Sublime Porte"
  TUR_raid_on_the_sublime_porte_desc:0 "Annoyed by the government's current direction, officers within our army supporting the İttihadist cause are preparing a coup. Unless they're eradicated in time, they'll storm the Sublime Porte, and put a figure more sympathetic to their cause."
  TUR_march_on_harbiye_nezareti:0 "March on Harbiye Nezâreti"
@@ -2105,15 +2110,15 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_ittihadist_officers_join_local_resistance_desc:0 "İttihadists officers are organizing to local resistance in minority regions of our empire to both force our hand and to get support from the locals."
  TUR_ittihadist_officers_disobey_high_command:0 "İttihadist Officers Disobey High Command"
  TUR_ittihadist_officers_disobey_high_command_desc:0 "itthadists officers outright disobeying our higher ranking officers and refusing to comply with the given orders."
- TUR_itilafist_officers_raid_weapon_arsenal:0 "İtilafist Officers Raid Weapon Arsenal"
+ TUR_itilafist_officers_raid_weapon_arsenal:0 "[TUR_halaskaran_get_name] Officers Raid Weapon Arsenal"
  TUR_itilafist_officers_raid_weapon_arsenal_desc:0 "İtilafist officers are opposing our government by raiding weapon arsenals, strengthening themselves in the process."
- TUR_itilafist_officers_blacmail_politicians:0 "İtilafist Officers Blackmail Politicians"
+ TUR_itilafist_officers_blacmail_politicians:0 "[TUR_halaskaran_get_name] Officers Blackmail Politicians"
  TUR_itilafist_officers_blacmail_politicians_desc:0 "İtilafist officers are trying to gain my influence by trying to blackmail our politicians and pressuring them to take actions in their interests."
- TUR_itilafist_officers_recruit_new_officers:0 "İtilafist Officers Recruit New Officers"
+ TUR_itilafist_officers_recruit_new_officers:0 "[TUR_halaskaran_get_name] Officers Recruit New Officers"
  TUR_itilafist_officers_recruit_new_officers_desc:0 "İtilafist officers are approching young military school graduates to extend their base membership in order to strengthening their power."
- TUR_itilafist_officers_join_local_resistance:0 "İtilafist Officers Join Local Resistance"
+ TUR_itilafist_officers_join_local_resistance:0 "[TUR_halaskaran_get_name] Officers Join Local Resistance"
  TUR_itilafist_officers_join_local_resistance_desc:0 "İtilafist officers are organizing to local resistance in minority regions of our empire to both force our hand and to get support from the locals."
- TUR_itilafist_officers_disobey_high_command:0 "İtilafist Officers Disobey High Command"
+ TUR_itilafist_officers_disobey_high_command:0 "[TUR_halaskaran_get_name] Officers Disobey High Command"
  TUR_itilafist_officers_disobey_high_command_desc:0 "İtilafist officers outright disobeying our higher ranking officers and refusing to comply with the given orders."
  TUR_promote_ittihadist_officers:0 "Promote İttihadist Officers"
  TUR_promote_ittihadist_officers_desc:0 "İttihadist officers are not satisfied with their ranks. Promoting some will satisfy their ambitions."
@@ -2131,13 +2136,13 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_reopen_ittihadist_academies_desc:0 "İttihadist have proven to be too powerful to being opposed in their military school. Perhaps reopening them would be the wisest choice."
  TUR_strict_army_inspections:0 "Strict Army Inspections"
  TUR_strict_army_inspections_desc:0 "Both factions, whether İttihadist or İtilafist, do nothing but harm the politics of our nation. To curtail their power, we'll have to tighten army inspections and purge both sides."
- TUR_promote_itilafist_officers:0 "Promote İtilafist Officers"
+ TUR_promote_itilafist_officers:0 "Promote [TUR_halaskaran_get_name] Officers"
  TUR_promote_itilafist_officers_desc:0 "İtilafist officers are not satisfied with their ranks. Promoting some will satisfy their ambitions."
  TUR_pass_pro_itilafist_laws:0 "Pass Pro-İtilafist Laws"
  TUR_pass_pro_itilafist_laws_desc:0 "İtilafist officers are not happy with our policies. Passing some laws they support will please them."
  TUR_close_down_itilafist_headquarters:0 "Close Down İtilafist Headquarters"
  TUR_close_down_itilafist_headquarters_desc:0 "İtilafist headquarters are a hotbed of İtilafist recruitment and powerbase. Shutting some down will undermine their influence."
- TUR_arrest_itilafist_officers:0 "Arrest İtilafist Officers"
+ TUR_arrest_itilafist_officers:0 "Arrest [TUR_halaskaran_get_name] Officers"
  TUR_arrest_itilafist_officers_desc:0 "Some arrests and trials against several İtilafist officers for show will both curve their influence and spread fear among them."
  TUR_police_raids_on_itilafists:0 "Police Raids on İtilafists"
  TUR_police_raids_on_itilafists_desc:0 "Though İtilafists are influential in the army, the majority of the armed forces are still loyal to the state. We can use the army and the police to raid on them."
@@ -2729,6 +2734,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_occupy_cyprus_desc:0 "Inhabited by Greeks since ancient times, Cyprus fell out of mainland Greek influence when Islam displaced the Byzantine Empire from Asia Minor. Since then, there has been a large Turkish community settled alongside the indigenous Greek population. The island remained under Ottoman control until the 19th century, when the British took administrative control of the island following the Turkish-Russian War, with sovereignty remaining with the Ottomans.\nNow that the British have no control over the island and Greece has only colonised the island as far back as before Christ, we must declare our sovereignty over Cyprus under the principle of national self-determination."
  TUR_declare_jihad:0 "Declare Jihad"
  TUR_declare_jihad_desc:0 "Our leader is Sultan and Caliph, the proxy for Allah's apostle. By declaring Jihad, we may gain support from Islamic comrades."
+ TUR_jihad_declared:0 "Jihad has been declared"
  TUR_declare_jihad_tt:0 "Modify [TUR_army_of_a_bygone_era_name] by\nDivision Recovery Rate: §G+3.0%§!\nWeekly £war_support_modifiericons_texticon  War Support (Combat Casualties): §G+0.20%§!\n\n"
  TUR_renounce_our_claims:0 "Renounce our Claims"
  TUR_renounce_our_claims_desc:0 "Our empire has lost most of its lands in the recent years. Yet this upcoming war is a great opportunity for us to allign with a great power and claim some of our lost territories."
