--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4659,7 +4659,7 @@
  TUR_mustafa_asim_pasa:0 "Mustafa Asım Paşa"
  TUR_depoliticize_the_army:0 "Depoliticize the Army"
  TUR_depoliticize_the_army_desc:0 "As our minister of war Mahmud Şevket Paşa has adress the parliament, the greatest problem of our empire is neither the finances nor the foreign powers. It remains as the military involvement into politics by both sides. Unless we work on that issue, the army will continue to coup the politics. Under Mahmud Şevket Paşa's lead, we will work towards depoliticizing the army."
- TUR_depoliticize_the_army_tt:0 "Unlocks £decision_icon_small §YDepoliticize the Army§! Decisions, working towards curtailing the power of §Yİttihadist Officers§! and §Yİtilafist Officers§!.\n"
+ TUR_depoliticize_the_army_tt:0 "Unlocks £decision_icon_small §YDepoliticize the Army§! Decisions, working towards curtailing the power of §Yİttihadist Officers§! and §Y[TUR_halaskaran_get_name] Officers§!.\n"
  TUR_elections_of_1912:0 "Elections of 1912"
  TUR_elections_of_1912_desc:0 "As the elections approach in the empire, the already well established İttihat ve Terakki and the newly organized liberals started to oppose each other. As many speculate, this will evolve into an undemocratic environment, and perhaps a violent elections."
  TUR_elections_of_1912_tt:0 "When the §YGeneral Election§! happens in late §YNovember 1912§!, this focus will automatically be completed"
@@ -5269,9 +5269,6 @@
  TUR_harbiyeli_officers_desc:0 "With the start of the modernization of our army, the newly educated army officers were mostly sympathetic to the west and wanted to hinder the power of the Sultan. These officers, which are known as "Harbiyeli Officers" will protect our rule in the empire."
  TUR_reaffirm_loyalty_of_the_army:0 "Reaffirm Loyalty of the Army"
  TUR_reaffirm_loyalty_of_the_army_desc:0 "Though most of the officers are loyal to our rule, the common man fighting in the army opposes our secular and progressive regime. We have to reaffirm their loyalty so what happened in 31 March shall never happen again."
- TUR_savior_officer_coup:0 "Savior Officer Coup"
- TUR_jihad_declared:0 "Jihad has been declared"
- TUR_savior_officer_coup_desc:0 "After the so called "Election of Clubs", the anti-partisan Halâskâr Zâbitân Clique has launced a coup to take over the leadership. Lucky, they'll soon hold a proper and just elections."
  TUR_avert_the_ittihadist_coup:0 "Avert the İttihatist Coup"
  TUR_avert_the_ittihadist_coup_desc:0 "We've managed to locate all of the İttihatists who were willing to launch a coup against our newly formed government. Now that we've managed to avert the coup, we can finally reform the empire in our image."
  TUR_raid_on_the_sublime_porte:0 "Raid on Sublime Porte"
@@ -6177,9 +6174,9 @@
  TUR_improve_traditional_army_doctrine_desc:0 "Experienced commanders always remember the lessons of past wars."
  TUR_organization_artillery:0 "Organization Artillery"
  TUR_organization_artillery_desc:0 "We need to study  artillery to overcome superior foe of our enemies."
- TUR_coup_of_savior_officers:0 "Saviour Officers"
- TUR_coup_of_savior_officers_tooltip:0 "This focus will be automatically completed after the mission\nThe mission will fire after the "§YElection of Clubs§!""
- TUR_coup_of_savior_officers_desc:0 "The Ottoman state is at a crossroads. Either we will restore law and democratic order, or we will lie down under the yoke of a military dictatorship."
+ TUR_coup_of_saviour_officers:0 "Saviour Officers"
+ TUR_coup_of_saviour_officers_tooltip:0 "This focus will be automatically completed after the mission\nThe mission will fire after the "§YElection of Clubs§!""
+ TUR_coup_of_saviour_officers_desc:0 "The Ottoman state is at a crossroads. Either we will restore law and democratic order, or we will lie down under the yoke of a military dictatorship."
  TUR_balkan_war:0 "Resignation of Ahmed Muhtar Paşa"
  TUR_balkan_war_desc:0 "Due to the unexpected outbreak of the First Balkan War, Ahmed Muhtar Paşa was forced to resign, leaving it's place to Mehmed Kamil Paşa. Taking adventage of the chaos, İTF regained it's strength and started a counter coup against the current government. While the war wages on the Balkans, can we prevent the raid on the Sublime Porte?"
  TUR_new_elections:0 "Re-Elections in the Empire"
