--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8376,11 +8376,11 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  SAU_Egypt_friend: "§nRelations with Egypt will not be severed!§!"
  SAU_Egypt_enemy: "§RRelations with Egypt will be severed!§!"
  SAU_Foreign_relations: "Foreign Relations Department"
- SAU_Egyptian_adv_tt: "§YUnlocks Egyptian Advisors!§!"
- SAU_Iraqi_adv_tt: "§YUnlocks Iraqi Advisors!§!"
- SAU_Syrian_adv_tt: "§YUnlocks Syrian Advisors!§!"
- SAU_Magherb_adv_tt: "§YUnlocks Magherbi Advisors!§!"
- SAU_Saudi_adv_tt: "§YUnlocks Arabian Advisors!§!"
+ SAU_Egyptian_adv_tt: "Unlocks §YEgyptian§! Advisors."
+ SAU_Iraqi_adv_tt: "Unlocks §YIraqi§! Advisors."
+ SAU_Syrian_adv_tt: "Unlocks §YSyrian§! Advisors."
+ SAU_Magherb_adv_tt: "Unlocks §YMagherbi§! Advisors."
+ SAU_Saudi_adv_tt: "Unlocks §YArabian§! Advisors."
  SAU_magherb_advisors: "Invite Magherbi Advisors"
  SAU_Hejazi_opposition: "Hejazi Opposition"
  Zainal_Company: "Zainal Company"
