--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -1037,12 +1037,12 @@
  TUR_committee_member:0 "Committee Member"
  TUR_committee_member_desc:0 "Since we're a committee member, our little enclave of an autonomous administration receives the support of the state. Yet the survival of our administration depends solely on the final decision of [347.GetName]."
  TUR_committee_member_1_tt:0 "§ROur state will be annexed back into [TUR.GetNameDef] if we capitulate"
- TUR_committee_member_2_tt:0 "§ROur state will be annexed back into [TUR.GetNameDef] if our surrender progress is more than 75%"
- TUR_committee_member_3_tt:0 "§ROur state will be annexed back into [TUR.GetNameDef] if our surrender progress is more than 70%"
- TUR_committee_member_4_tt:0 "§ROur state will be annexed back into [TUR.GetNameDef] if our surrender progress is more than 65%"
- TUR_committee_member_5_tt:0 "§ROur state will be annexed back into [TUR.GetNameDef] if our surrender progress is more than 60%"
- TUR_committee_member_6_tt:0 "§ROur state will be annexed back into [TUR.GetNameDef] if our surrender progress is more than 55%"
- TUR_committee_member_7_tt:0 "§ROur state will be annexed back into [TUR.GetNameDef] if our surrender progress is more than 50%"
+ TUR_committee_member_2_tt:0 "§ROur state will be annexed back into [TUR.GetNameDef] if our surrender progress is more than 75%§!"
+ TUR_committee_member_3_tt:0 "§ROur state will be annexed back into [TUR.GetNameDef] if our surrender progress is more than 70%§!"
+ TUR_committee_member_4_tt:0 "§ROur state will be annexed back into [TUR.GetNameDef] if our surrender progress is more than 65%§!"
+ TUR_committee_member_5_tt:0 "§ROur state will be annexed back into [TUR.GetNameDef] if our surrender progress is more than 60%§!"
+ TUR_committee_member_6_tt:0 "§ROur state will be annexed back into [TUR.GetNameDef] if our surrender progress is more than 55%§!"
+ TUR_committee_member_7_tt:0 "§ROur state will be annexed back into [TUR.GetNameDef] if our surrender progress is more than 50%§!"
 
  TUR_ottoman_industrial_investment:0 "Ottoman Industrial Investment"
  TUR_ottoman_military_mission:0 "Ottoman Military Mission"
