--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10724,3 +10724,9 @@ GER_tirpitz_grand_fleet:0 "Tirpitz's Grand Fleet"
 GER_tirpitz_grand_fleet_desc:0 ""
 GER_v_thirty_production:0 "V-30 Production"
 GER_v_thirty_production_desc:0 ""
+GER_slash_taxes_on_individuals:0 "Slash Taxes on Individuals"
+GER_slash_taxes_on_individuals_desc:0 ""
+GER_deregulating_social_welfare:0 "De-regulating Social Welfare"
+GER_deregulating_social_welfare_desc:0 ""
+GER_liberalistische_okonomie:0 "Liberalistische Okonomie"
+GER_liberalistische_okonomie_desc:0 ""
