--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8273,6 +8273,13 @@ must_lean_firm.tt:0 "The administration is currently §SFirmly Progressive§!"
 usa_nigbalp.tt:0 "These decisions will §Ggive§! £pol_power §YPolitical Power§!, but give slightly §Rless§! resources then the focus §YResource Development Department§!"
 usa_nigbealp.tt:0 "These decisions will §Rcost§! £pol_power §YPolitical Power§!, but give slightly §Gmore§! resources then the focus §YLease Land to Private Companies§!"
 
+# wilson foreign policy
+USA_speak_to_congress:0 "Speak to Congress"
+USA_important_of_deterrence:0 "Speech on the Importance of Deterrence"
+USA_rally_politicians_on_war_preparedness:0 "Rally Politicians around the War Preparedness Campaign"
+
+
+
 USA_repeal_tax_cuts:0 "Repeal Tax Cuts"
 USA_rural_education:0 "Rural Education Investments"
 
