--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -945,6 +945,7 @@ USA_boost_american_manufacturing_desc:0 "We must prioritize American industry an
 USA_big_navy_act:0 "Big Navy Act"
  Wilson_Nomination_tt:0 "§gPopular in the South,§! §CWoodrow Wilson§!§g will likely only win through a split vote.§!"
 USA_pursue_world_peace:0 "Dreams of World Peace"
+USA_support_the_war_preparedness_campaign:0 "Support the War Preparedness Campaign"
  USA_anti_submarine_tactics:0 "Anti Submarine Warfare"
  Bryan_Nomination_tt:0 "§gPopular nationwide and running for election an unprecedented fourth time, §!§CWilliam Jennings Bryan§!§g is a likely presidential winner.§!"
  Everyone_Disliked_That_tt:0 "§G[Everyone Disliked That]§!"
