Xibei is Mongolia

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -1611,7 +1611,7 @@
  FNG_focus_japanese_subject:0 "Request Japanese Protection"
  FNG_focus_japanese_subject_desc:0 "We've fucked up. To survive we have to bow."
  FNG_focus_invade_xibei:0 "Pacify Xibei"
- FNG_focus_invade_xibei_desc:0 "Xibei and Mongolia are rightfully Chinese provinces, and [ROOT.GetLeader], the governor of Dongbei is rightful to claim the title of the dual governor of the Northern Regions."
+ FNG_focus_invade_xibei_desc:0 "Xibei, Mongolia is rightfully Chinese provinces, and [ROOT.GetLeader], the governor of Dongbei is rightful to claim the title of the dual governor of the Northern Regions."
  FNG_focus_seize_CER:0 "Seize CER"
  FNG_focus_seize_CER_desc:0 "I don't like the way it looks."
  FNG_focus_deal_with_opium:0 "Deal with Opium"
