--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -3567,7 +3567,11 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  # TUNISIA
  TUN_naceur_bey:0 "Naceur Bey"
  TUN_ali_bash_hamba:0 "Ali Bash Hanba"
- 
+ TUN_bechir_sfar:0 "Béchir Sfar"
+ TUN_abdekjelil_zaouche:0 "Abdeljelil Zaouche" 
+ TUN_khairakkah_ben_mustapha:0 "Khairallah Ben Mustapha"
+ TUN_sadok_zmerli:0 "Sadok Zmerli"
+
  # OTTOMAN EMPIRE / TURKEY
  TUR_prens_sabahattin:0 "Prens Sabahattin"
  TUR_ahmed_cemal:0 "Ahmet Cemâl Paşa"
