--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -140,6 +140,8 @@
  TUR_liberal_reformer:0 "Liberal Reformer"
  professor_lawyer_arab:0 "Lawyer Professor"
  journalist_arab:0 "Journalist"
+ democratic_journalist:0 "Democratic Journalist"
+ destour_support:0 "Destour Supporter"
  TUR_leftist_parliament:0 "Leftist Parliament"
  TUR_milliyetci_sosyalist_advisor:0 "Nationalist Socialist"
  TUR_milliyetci_sosyalist:0 "Nationalist Socialist"
@@ -449,3 +451,4 @@
  bonaparte_legacy:0 "Bonaparte Legacy"
  bonaparte_legacy_louis:0 "Bonaparte Legacy"
  minister_of_national_defense:0 "Minister of National Defense"
+ administration_reformer:0 "Administration Reformer"
