Tweak italian focus breaking
when france declare war on germany in 1916, Italy is in the middle of entente focus,  and this could break italian focus, so I gave them to right to choose.

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -9570,6 +9570,10 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_italy.20.d_1: "General Alberto Pollio, died from a heart attack, caused by  myocarditis, of which the was suffering for some time.\nHis sudden death caused an upset in our high command."
  ww1_italy.20.d_2: "General Alberto Pollio, died from a heart attack, caused by  myocarditis, of which he was suffering for some time.\nAn open triplicisti and former military attaché to Vienna, his sudden death caused an upset in Vienna and Berlin, as it came just after the events in Sarajevo.\nVarious parties started to speculate that he was assanitaed, but there are no clues nor evidence backing it."
  ww1_italy.20.a: "Cadorna has lost his antagonist."
+ ww1_italy.21.t:0 "Honour the Triple Alliance?"
+ ww1_italy.21.d:0 "[GER.GetNameDefCap] is in a defensive war, and now we have to honour the defensive alliance and join the war. But it's not clear that this is good for Italy - after all, the treaty is written on a piece of paper."
+ ww1_italy.21.a:0 "Honour the alliance!"
+ ww1_italy.21.b:0 "You'll never expect this!"
 
  #Italian collapse
  garibaldi.1.t:0 "Victor Emmannuel Abdicates"
