Ottoman fragmentation game rules

--- a/localisation/english/ww1_game_rules_l_english.yml
+++ b/localisation/english/ww1_game_rules_l_english.yml
@@ -34,6 +34,13 @@
  GER_FRAGMENTATION_STATUS:0 "@GER German Fragmentation"
  RULE_OPTION_GER_FRAGMENTED:0 "Federal States"
  RULE_OPTION_GER_FRAGMENTED_DESC:0 "The borders of German will be redrawn by Federal States."
+ TUR_FRAGMENTATION_STATUS:0 "@TUR Ottoman Fragmentation"
+ RULE_OPTION_TUR_FRAGMENTED:0 "Ethnic Borders"
+ RULE_OPTION_TUR_FRAGMENTED_DESC:0 "The borders of the Ottoman Empire will be redrawn by ethnicity."
+ RULE_OPTION_TUR_NATIONAL_OATH:0 "National Oath"
+ RULE_OPTION_TUR_NATIONAL_OATH_DESC:0 "The borders of the Ottoman Empire will be redrawn by the National Oath of the Ottoman Parliament."
+ RULE_OPTION_TUR_BYZANTINE:0 "Byzantinophile"
+ RULE_OPTION_TUR_BYZANTINE_DESC:0 "Nothing happened at Constantinople in 1453..."
 
 #first balkan war outcome
 FIRST_BALKAN_WAR_OUTCOME:0 "First Balkan War Outcome £ww1_game_rule_flag_BUL  £ww1_game_rule_flag_SER  £ww1_game_rule_flag_GRE  £ww1_game_rule_flag_TUR"
