--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2941,19 +2941,29 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_anti_imperialist_revanchist_struggle_revanchist_medium_control:0 "Medium Revanchist Control"
  TUR_anti_imperialist_revanchist_struggle_revanchist_low_control:0 "Low Revanchist Control"
  TUR_army_civilian_struggle:0 "Army-Civilian Struggle"
- TUR_army_civilian_struggle_army:0 "Army Faction"
- TUR_army_civilian_struggle_civilian:0 "Civilian Faction"
- TUR_third_faction_civilian_struggle_third_faction:0 "Third Faction"
  TUR_army_civilian_struggle_balanced:0 "Balanced Influence"
+ TUR_army_civilian_struggle_civilian:0 "Civilian Faction"
+ TUR_army_civilian_struggle_civilian_high_control:0 "High Civilian Faction Influence"
+ TUR_army_civilian_struggle_civilian_medium_control:0 "Medium Civilian Faction Influence"
+ TUR_army_civilian_struggle_civilian_low_control:0 "Low Civilian Faction Influence"
+ TUR_army_civilian_struggle_army:0 "Army Faction"
+ TUR_third_faction_civilian_struggle_third_faction:0 "Third Faction"
  TUR_army_civilian_struggle_army_high_control:0 "High Army Faction Influence"
  TUR_army_civilian_struggle_army_medium_control:0 "Medium Army Faction Influence"
  TUR_army_civilian_struggle_army_low_control:0 "Low Army Faction Influence"
  TUR_third_faction_civilian_struggle_third_faction_high_control:0 "High Third Faction Influence"
  TUR_third_faction_civilian_struggle_third_faction_medium_control:0 "Medium Third Faction Influence"
  TUR_third_faction_civilian_struggle_third_faction_low_control:0 "Low Third Faction Influence"
- TUR_army_civilian_struggle_civilian_high_control:0 "High Civilian Faction Influence"
- TUR_army_civilian_struggle_civilian_medium_control:0 "Medium Civilian Faction Influence"
- TUR_army_civilian_struggle_civilian_low_control:0 "Low Civilian Faction Influence"
+ TUR_local_central_rule:0 "Local-Central Committee Influence"
+ TUR_local_central_rule_balanced:0 "Balanced Influence"
+ TUR_local_central_rule_local:0 "Local Committee"
+ TUR_local_central_rule_local_high_control:0 "High Local Committee Influence"
+ TUR_local_central_rule_local_medium_control:0 "Medium Local Committee Influence"
+ TUR_local_central_rule_local_low_control:0 "Low Local Committee Influence"
+ TUR_local_central_rule_central:0 "Central Committee"
+ TUR_local_central_rule_central_high_control:0 "High Central Committee Influence"
+ TUR_local_central_rule_central_medium_control:0 "Medium Central Committee Influence"
+ TUR_local_central_rule_central_low_control:0 "Low Central Committee Influence"
  TUR_appoint_liberals:0 "Appoint Liberals"
  TUR_appoint_conservatives:0 "Appoint Conservatives"
  TUR_denounce_war:0 "Denounce War"
