--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4415,20 +4415,17 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman.115.t:0 "Mustafa Rahmi Bey Expands his Autonomy in [339.GetName]"
  ottoman.115.d:0 "Mustafa Rahmi Bey, an İttihat ve Terakki member, has been increasing his autonomy from the government. While actively defying government orders, he started to expand his own domain and push his own actions without the approval of [347.GetName]. Since he's a Committee member, it is reasonable and even motivated for us to turn a blind eye on his actions. Choosing to tighten the grip on the governor however, will increase central control at a cost."
  ottoman.115.a:0 "A dear Committee member would never do such a thing."
- ottoman.115.b:0 "Perhaps Rahmi Bey was right, we better follow his orders."
- ottoman.115.c:0 "No one can deny state authority."
+ ottoman.115.b:0 "No one can deny state authority."
  TUR_ittihadist_autonomy_izmir:0 "(@TUR §YOttoman İzmir§!):\n   Becomes owner and controller of §Y[339.GetName]§!\n   §YOttoman Smyrna§! becomes §YAutonomous Vilayet§! of §Y[TUR.GetName]§!   Politics will change\n   §YİTF§! becomes the ruling party.\n   Public elections will not be held.\n   §YMustafa Rahmi Bey§!(@TUR) joins §YOttoman Governate of Smyrna§!\n   §YMustafa Rahmi Bey§! becomes leader for the authoritarian party.\n\n   Add §YCommittee Member§!, which grants (§ROur state will be annexed back into [TUR.GetNameDef] if our surrender progress is more than 65%§!).\n"
  ottoman.116.t:0 "Cemal Azmi Bey Expands his Autonomy in [354.GetName]"
  ottoman.116.d:0 "Cemal Azmi Bey, an İttihat ve Terakki member, has been increasing his autonomy from the government. While actively defying government orders, he started to expand his own domain and push his own actions without the approval of [347.GetName]. Since he's a Committee member, it is reasonable and even motivated for us to turn a blind eye on his actions. Choosing to tighten the grip on the governor however, will increase central control at a cost."
  ottoman.116.a:0 "A dear Committee member would never do such a thing."
- ottoman.116.b:0 "Perhaps Azmi Bey was right, we better follow his orders."
- ottoman.116.c:0 "No one can deny state authority."
+ ottoman.116.b:0 "No one can deny state authority."
  TUR_ittihadist_autonomy_trabzon:0 "(@TUR §YOttoman İzmir§!):\n   Becomes owner and controller of §Y[354.GetName]§!\n   §YOttoman Trebizond§! becomes §YAutonomous Vilayet§! of §Y[TUR.GetName]§!   Politics will change\n   §YİTF§! becomes the ruling party.\n   Public elections will not be held.\n   §YCemal Azmi Bey§!(@TUR) joins §YOttoman Governate of Trebizond§!\n   §YCemal Azmi Bey§! becomes leader for the authoritarian party.\n\n   Add §YCommittee Member§!, which grants (§ROur state will be annexed back into [TUR.GetNameDef] if our surrender progress is more than 65%§!).\n"
  ottoman.117.t:0 "Mehmed Reşid Bey Expands his Autonomy in [350.GetName]"
  ottoman.117.d:0 "Mehmed Reşid Bey, an İttihat ve Terakki member, has been increasing his autonomy from the government. While actively defying government orders, he started to expand his own domain and push his own actions without the approval of [347.GetName]. Since he's a Committee member, it is reasonable and even motivated for us to turn a blind eye on his actions. Choosing to tighten the grip on the governor however, will increase central control at a cost."
  ottoman.117.a:0 "A dear Committee member would never do such a thing."
- ottoman.117.b:0 "Perhaps Reşid Bey was right, we better follow his orders."
- ottoman.117.c:0 "No one can deny state authority."
+ ottoman.117.b:0 "No one can deny state authority."
  TUR_ittihadist_autonomy_diyarbakir:0 "(@TUR §YOttoman İzmir§!):\n   Becomes owner and controller of §Y[350.GetName]§!\n   Becomes owner and controller of §Y[829.GetName]§!\n   Becomes owner and controller of §Y[884.GetName]§!\n   §YOttoman Diyarbekir§! becomes §YAutonomous Vilayet§! of §Y[TUR.GetName]§!   Politics will change\n   §YİTF§! becomes the ruling party.\n   Public elections will not be held.\n   §YMehmed Reşid Bey§!(@TUR) joins §YOttoman Governate of Diyarbekir§!\n   §YMehmed Reşid Bey§! becomes leader for the authoritarian party.\n\n   Add §YCommittee Member§!, which grants (§ROur state will be annexed back into [TUR.GetNameDef] if our surrender progress is more than 65%§!).\n"
  ottoman.118.t:0 "Central Government Usurps Control"
  ottoman.118.d:0 "The autonomous Governorate we've establish for ourself has failed to exist. Due to our incapability to maintain public order and fend off foreign invasion, the central government has decided to end our autonomous rule."
@@ -4439,6 +4436,10 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman.120.t:0 "Struggle for Control"
  ottoman.120.d:0 "As we've gained our autonomy as [ROOT.GetName] our rule still depends on the central government seated in there. As still we're an official part of the empire, we'll have to manage the central government's effects on us.\nThough we have a large degree of autonomy in our actions within the regions we control, the influence of [347.GetName] is not completely cut. Rather than having unlimited power to manage our lands as we please, we'll be playing a balancing game between the politicians in the capital and our own power base. We must be keep in mind to not either alienate the central government, neither to be too dependent on them."
  ottoman.120.a:0 "We'll keep an eye on the central government."
+ ottoman.121.t:0 "Loyalties Within the Committee"
+ ottoman.121.d:0 "As a new autonomy in [FROM.capital.GetName] has been established by our fellow committee member [FROM.GetLeader], the matters in the region will be directly handled by the man himself. Due to the connection he has to the central party and the committee, many within the ruling positions of the state will turn a blind eye on his actions, even if its breaching the orders issued by the central state.\nWhat policies will he employ or how will his rule end up are questions we don't have an answer to yet. What we can decide right now is to either deal with the matters in the capital or to take a closer look into the developments in [FROM.capital.GetName]."
+ ottoman.121.a:0 "Off to [FROM.capital.GetName] we go."
+ ottoman.121.b:0 "We stand loyal to [347.GetName]."
 
  ottoman.120.t:0 "Sects Mobilize"
  ottoman.120.d:0 "With the start of the war, conservative sects supporting our regime has started to send volunteer forces in an effort to aid us in our war effort."
