Starting on Influence Mechanic (TBD)

--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -102,6 +102,29 @@ GER_election2:0 "Upcoming Reichstag Election"
 
 GER_reichstag_next_elections_category:0 "Predicted Election Results"
 
+#Conservative Influence Mechanic
+GER_conservative_influence_mechanic:0 "fuck off"
+GER_conservative_influence_mechanic_desc:0 "Testing Influence Stuff':'\n[GER_conservative_influence_battle]\n[GER_agrarian_influence_battle]\n[GER_pan_german_influence_battle]"
+
+GER_minimal_conservative_influence:0 "Minimal Conservative Influence"
+GER_low_conservative_influence:0 "Low Conservative Influence"
+GER_middiling_conservative_influence:0 "Middliling Conservative Influence"
+GER_imposing_conservative_influence:0 "Imposing Conservative Influence"
+GER_absolute_conservative_influence:0 "Absolute Conservative Influence"
+
+GER_minimal_agrarian_influence:0 "Minimal Agrarian Influence"
+GER_low_agrarian_influence:0 "Low Agrarian Influence"
+GER_middiling_agrarian_influence:0 "Middiling Agrarian Influence"
+GER_imposing_agrarian_influence:0 "Imposing Agrarian Influence"
+GER_absolute_agrarian_influence:0 "Absolute Agrarian Influence"
+
+GER_minimal_pan_german_influence:0 "Minimal Pan-German Influence"
+GER_low_pan_german_influence:0 "Low Pan-German Influence"
+GER_middiling_pan_german_influence:0 "Middiling Pan-German Influence"
+GER_imposing_pan_german_influence:0 "Imposing Pan-German Influence"
+GER_absolute_pan_german_influence:0 "Absolute Pan-German Influence"
+
+
 #Economic Actions
 GER_economic_actions:0 "Economic Actions"
 GER_finance_berlin_military_complex:0 "Finance Berlin's Military Complex"
